--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy VitePress site to Pages
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 # 设置tokenn访问权限
 permissions:
@@ -25,17 +25,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2 # 安装pnpm并添加到环境变量
-        with:
-          version: 8.6.12 # 指定需要的 pnpm 版本
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: pnpm # 设置缓存
+          cache: pnpm
+
+      - name: Setup pnpm
+        run: |
+          corepack enable  # 启用 Corepack[^37^]
+          corepack prepare pnpm@9.12.3 --activate  # 激活指定版本的 pnpm[^37^]
       - name: Setup Pages
         uses: actions/configure-pages@v3  # 在工作流程自动配置GithubPages
+      - name: Clear pnpm cache
+        run: pnpm store prune
       - name: Install dependencies
         run: pnpm install # 安装依赖
       - name: Build with VitePress
